--- a/contrast.html
+++ b/contrast.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xml:lang="en" lang="en">
   <head>
     <meta charset="utf-8">
     <title>Accessibility Contrast</title>
@@ -25,12 +25,12 @@
       </thead>
       <tbody>
       <tr>
-      <td id="cell1">It is much easier to achieve sufficient contrast by using dark text on a light background</td>
-      <td id="cell2">It is much easier to achieve sufficient contrast by using dark text on a light background</td>
+      <td id="cell1">1.It is much easier to achieve sufficient contrast by using dark text on a light background</td>
+      <td id="cell2">2.It is much easier to achieve sufficient contrast by using dark text on a light background</td>
       </tr>
       <tr>
-      <td id="cell3">It is much easier to achieve sufficient contrast by using dark text on a light background</td>
-      <td id="cell4">It is much easier to achieve sufficient contrast by using dark text on a light background</td>
+      <td id="cell3">3.It is much easier to achieve sufficient contrast by using dark text on a light background</td>
+      <td id="cell4">4.It is much easier to achieve sufficient contrast by using dark text on a light background</td>
       </tr>
       </tbody>
       </table>
