--- a/headings.html
+++ b/headings.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xml:lang="en" lang="en">
   <head>
     <meta charset="utf-8">
     <title>Accessibily Headings</title>
@@ -16,11 +16,11 @@
 
     <div class="content">
       <center>
-      <b>Utah State University<br>
+      <em>Utah State University</em>
       Washington DC Internship Program<br>
       US Congress, Washington DC, USA</b>
       <br />
-      <p><img src="https://usueastern.edu/price/internships/_images/internship.jpg"></p>
+      <p><img src="https://usueastern.edu/price/internships/_images/internship.jpg" alt="Girl student studying at a table with people."></p>
       </center>
 
       <p><strong>Application Form</strong></p>
