--- a/index.html
+++ b/index.html
@@ -1,76 +1,82 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Accessibility Forms</title>
-    <link rel="stylesheet" href="styles.css" type="text/css">
-  </head>
-  <body>
-    <ul class="navigation">
-      <li><a href="./index.html">Form</a></li>
-      <li><a href="./alt_text.html">Alt-Text</a></li>
-      <li><a href="./contrast.html">Contrast</a></li>
-      <li><a href="./headings.html">Headings</a></li>
-      <li><a href="./tables.html">Tables</a></li>
-    </ul>
-    <div class="content">
-      <h1>Application form</h1>
-
+<html xml:lang="en" lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Accessibility Forms</title>
+  <link rel="stylesheet" href="styles.css" type="text/css">
+</head>
+<body>
+  <ul class="navigation">
+    <li><a href="./index.html">Form</a></li>
+    <li><a href="./alt_text.html">Alt-Text</a></li>
+    <li><a href="./contrast.html">Contrast</a></li>
+    <li><a href="./headings.html">Headings</a></li>
+    <li><a href="./tables.html">Tables</a></li>
+  </ul>
+  <div class="content">
+    <h1>Application form</h1>
+    <fieldset>
       <form action="" method="post" name="form1" id="form1">
-      <p>1. Personal Details</p>
-      <p>Name:
-      <input type="text" id="textfield"></p>
 
-      <p>Phone Number:
-      <input type="text" id="textfield3"></p>
+        <legend> Personal Details</legend>
+        <p>1. Personal Details</p>
+        <p>
+          <label for="Name"> Name: </label>
+          <input type="text" id="Name"></p>
 
-      <p>Date of Birth:
-      <input type="text" tabindex="-1" id="textfield2"></p>
+          <p><label for= "Phone"> Phone Number: </label>
+            <input type="text" id="Phone"></p>
 
-      <p><label for="textfield4">First Name:
-      <input type="text" id="textfield4"></p>
+            <p><label for="dateofBirth"> Date of Birth: </label>
+              <input type="text" tabindex="-1" id="dateofBirth"></p>
 
-      <p>Last Name:
-      <input type="text" tabindex="4" id="textfield5"></p>
+              <p><label for="firstname">First Name: </label>
+                <input type="text" id="firstname"></p>
 
-      <p><label for="address">Address:</label>
-      <input type="text"></p>
+                <p><label for="lastname"> Last Name: </label>
+                  <input type="text" tabindex="4" id="lastname"></p>
 
-      <p>State:
-       <select id="state">
-        <option value="0">Select</option>
-        <option value="Arizona">Arizona</option>
-        <option value="California">California</option>
-        <option value="Idaho">Idaho</option>
-        <option value="Montana">Montana</option>
-        <option value="Nevada">Nevada</option>
-        <option value="Utah">Utah</option>
-        <option value="Washington">Washington</option>
-        <option value="Wyoming">Wyoming</option>
-      </select>
-      </p>
+                  <p><label for="address">Address:</label>
+                    <input type="text" id="address"></p>
 
-      <fieldset>
-      <legend>2. Emergency Contact</legend>
-      <p>Name:
-      <input type="text" id="textfield13"></p>
+                    <p><label for= "state">State:</label>
+                      <select id="state">
+                        <option value="0">Select</option>
+                        <option value="Arizona">Arizona</option>
+                        <option value="California">California</option>
+                        <option value="Idaho">Idaho</option>
+                        <option value="Montana">Montana</option>
+                        <option value="Nevada">Nevada</option>
+                        <option value="Utah">Utah</option>
+                        <option value="Washington">Washington</option>
+                        <option value="Wyoming">Wyoming</option>
+                      </select>
+                    </p>
+                  </fieldset>
 
-      <p>Address:
-      <input type="text" id="textfield14"></p>
+                  <fieldset>
+                    <legend>2. Emergency Contact</legend>
+                    <p><label for="emergencycontactname">Name:</label>
+                      <input type="text" id="emergencycontactname"></p>
 
-      <p>State
-      <input type="text" id="textfield15"></p>
+                      <p><label for="emergencyaddress">Address:</label>
+                        <input type="text" id="emergencyaddress"></p>
 
-      <p>Telephone:
-      <input type="text" id="textfield16"></p>
-      </fieldset>
+                        <p><label for="emergencystate">State</label>
+                          <input type="text" id="emergencystate"></p>
 
-      <p>3. Citizenship</p>
-      <p><input type="radio">United States</p>
-      <p><input type="radio">Canada</p>
+                          <p><label for="telephonenumber">Telephone:</label>
+                            <input type="text" id="telephonenumber"></p>
+                          </fieldset>
 
-      <p><input type="submit" value="Submit" id="button" name="button"></p>
-      </form>
-    </div>
-  </body>
-</html>
+                          <p>3. Citizenship</p>
+                          <p><label for="unitedStates">United States</label>
+                            <input type="radio" id="unitedStates"></p>
+                          <p><label for="canada">Canada</label>
+                            <input type="radio" id="canada"></p>
+
+                          <p><input type="submit" value="Submit" id="button" name="button"></p>
+                        </form>
+                      </div>
+                    </body>
+                    </html>
