--- a/tables.html
+++ b/tables.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xml:lang="en" lang="en">
   <head>
     <meta charset="utf-8">
     <title>Accessibility Tables</title>
@@ -21,14 +21,14 @@
       <table>
         <tbody><tr>
           <td> </td>
-          <td><b>Monday</b></td>
-          <td><b>Tuesday</b></td>
-          <td><b>Wednesday</b></td>
-          <td><b>Thursday</b></td>
-          <td><b>Friday</b></td>
+          <td><em>Monday</em></td>
+          <td><em>Tuesday</em></td>
+          <td><em>Wednesday</em></td>
+          <td><em>Thursday</em></td>
+          <td><em>Friday</em></td>
         </tr>
         <tr>
-          <td><b>8:00-9:00</b></td>
+          <td><em>8:00-9:00</em></td>
           <td>Breakfast with Bob</td>
           <td> </td>
           <td> </td>
@@ -36,7 +36,7 @@
           <td> </td>
         </tr>
         <tr>
-          <td><b>9:00-10:00</b></td>
+          <td><em>9:00-10:00</em></td>
           <td> </td>
           <td> </td>
           <td>Meeting with Stewart</td>
@@ -49,30 +49,30 @@
       <table>
         <caption><h2>Table 2</h2></caption>
         <thead><tr>
-          <th scope="col">Time</td>
-          <th scope="col">Monday</th>
-          <th scope="col">Tuesday</th>
-          <th scope="col">Wednesday</th>
-          <th scope="col">Thursday</th>
-          <th scope="col">Friday</th>
+          <th scope= "col" id="time">Time</td>
+          <th scope= "col" id="monday">Monday</th>
+          <th scope= "col" id="tuesday">Tuesday</th>
+          <th scope= "col" id="wednesday">Wednesday</th>
+          <th scope= "col" id="thursday">Thursday</th>
+          <th scope= "col" id="fridday">Friday</th>
         </tr>
         </thead><tr>
         <tbody><tr>
         <tr>
-          <th scope="row">8:00-9:00</th>
-          <td>Breakfast with Bob</td>
-          <td> </td>
-          <td> </td>
-          <td> </td>
-          <td> </td>
+          <th scope= "row" id="time8-9">8:00-9:00</th>
+          <td headers= "monday time8-9">Breakfast with Bob</td>
+          <td headers= "tuesday time8-9" > </td>
+          <td headers= "wednesday time8-9"> </td>
+          <td headers= "thursday time8-9"> </td>
+          <td headers= "friday time8-9"> </td>
         </tr>
         <tr>
-          <th scope="row">9:00-10:00</th>
-          <td> </td>
-          <td> </td>
-          <td>Meeting with Stewart</td>
-          <td>Run errands</td>
-          <td>Walk the dog</td>
+          <th scope="row" id="time9-10">9:00-10:00</th>
+          <td headers= " monday time9-10"> </td>
+          <td headers= "tuesday time9-10"> </td>
+          <td headers= "wednesday time9-10">Meeting with Stewart</td>
+          <td headers= "thursday time9-10">Run errands</td>
+          <td headers= "friday time9-10">Walk the dog</td>
         </tr>
       </tbody></table>
       <br />
